demos/tbs-sample-python/files/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: IMAGE_NAME
        ports:
        - containerPort: 8080
