demos/tbs-sample-python/files/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: sample-app
spec:
  tls:
  - hosts:
    - tbs-sample-python.DNS_DOMAIN
    secretName: https-secret
  rules:
  - host: tbs-sample-python.DNS_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app
            port:
              number: 8080
